--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+Tue May 24 19:05:14 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/README:
+
+	Describe how to build all-docs and improve description of the
+	required tools.  
+
+Tue May 24 18:21:45 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/: bookmarks.txt, ecmascript.txt, exmode.txt, faq.txt,
+	feedback.txt, hacking.txt, installation.txt, introduction.txt,
+	lua-scripting.txt, mailcap.txt, marks.txt, mime.txt, remote.txt,
+	small.txt, tabs.txt, terminals.txt, urlshortcuts.txt:
+
+	Misc documentation improvements (mostly related to code listings).  
+
+Tue May 24 18:20:27 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/document/html/parser/parse.c:
+
+	Handle &#x0a; as a newline inside <pre>. (debian bug 211588) 
+
 Mon May 23 13:13:16 2005  Laurent Monin <zas@norz.org>:
 
 	* src/sched/download.c:
