--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed May 25 22:05:28 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/asciidoc.conf:
+
+	:set fileformat=unix 
+
 Tue May 24 19:05:14 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* doc/README:
