--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Jun  4 18:33:34 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* test/href_tests.html:
+
+	Add test for mailto URL with []'s which doesn't get 'joined'
+	correctly.  
+
 Fri Jun  3 16:18:22 2005  Laurent Monin <zas@norz.org>:
 
 	* src/intl/charsets.c:
