--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,87 @@
+Sun Jun  5 20:07:41 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/hooks.c:
+
+	Shut up error message on exit.  
+
+Sun Jun  5 19:04:19 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/core.c:
+
+	Workaround for TypeNone exception.  
+
+Sun Jun  5 19:03:25 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/hooks.c:
+
+	hooks.c rewritten. It works! 
+
+Sun Jun  5 18:56:43 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* contrib/python/hooks.py:
+
+	Fixed syntax error.  
+
+Sun Jun  5 18:39:46 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/core.c:
+
+	Be verbose with errors.  
+
+Sun Jun  5 16:16:12 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/core.c:
+
+	Safety check.  
+
+Sun Jun  5 16:08:02 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/core.c:
+
+	Mistake.  
+
+Sun Jun  5 16:02:08 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/core.h:
+
+	Removed unused python_hook.  
+
+Sun Jun  5 16:01:30 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/core.c:
+
+	Now hooks.py should be imported.  
+
+Sun Jun  5 14:41:18 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/: perl/core.c, python/core.c:
+
+	Removed unneeded slash.  
+
+Sun Jun  5 14:32:12 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/scripting.c:
+
+	Always build before committing! Python really, really added.  
+
+Sun Jun  5 14:26:06 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/scripting.c:
+
+	Python really added.  
+
+Sun Jun  5 14:22:08 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/python.c:
+
+	Killed warning.  
+
+Sun Jun  5 14:12:18 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/scripting/python/hooks.c:
+
+	Check whether Python was successfully initialized.  
+
 Sat Jun  4 18:33:34 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* test/href_tests.html:
