--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,48 @@
+Wed Jun  8 20:11:41 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Polish translation was updated.  
+
+Wed Jun  8 19:56:08 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/document/renderer.c:
+
+	warning-- 
+
+Wed Jun  8 19:39:15 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Typo.  
+
+Wed Jun  8 15:02:31 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/document/renderer.c:
+
+	Rewritten as proposed by Jonas on irc. Last Content-Type header
+	field is used.  
+
+Wed Jun  8 14:40:59 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/document/renderer.c:
+
+	Longer comment.  
+
+Wed Jun  8 14:09:56 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/document/renderer.c:
+
+	Prefer document meta header charset information over that sent by
+	server.  Sometimes they differ.  
+
+Wed Jun  8 08:38:59 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* config/m4/ruby.m4:
+
+	Try to fix bug in ruby configuration reported by Miciah. If ruby was
+	requested and it wasn't found error out.  
+
 Tue Jun  7 17:33:57 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
 
 	* NEWS:
